--- a/price-page/index.html
+++ b/price-page/index.html
@@ -14,8 +14,10 @@
     <div class="page">
         <div class="price-cards">
             <div class="price-card">
-                <h1 class="price-card__title">Basic</h1>
-                <div class="price-card__title-low">Website</div>
+                <h1 class="price-card__title">Basic
+                    <div class="price-card__title-low">Website</div>
+                </h1>
+
                 <div class="price-card__price green"><span>99€</span></div>
                 <div class="price-card__description">Simple website made in the world's most popular CMS system, Wordpress.</div>
                 <div class="price-card__options-list">
@@ -47,8 +49,10 @@
                 <button class="price-card__order-btn green">ORDER NOW</button>
             </div>
             <div class="price-card">
-                <h1 class="price-card__title">Business</h1>
-                <div class="price-card__title-low">Website</div>
+                <h1 class="price-card__title">Business
+                    <div class="price-card__title-low">Website</div>
+                </h1>
+
                 <img class='popular__badge' src="./img/badge.png" alt="badge-popular">
                 <div class="price-card__price blue">
                     <span>299€</span>
@@ -83,8 +87,10 @@
                 <button class="price-card__order-btn blue">ORDER NOW</button>
             </div>
             <div class="price-card">
-                <h1 class="price-card__title">Webshop</h1>
-                <div class="price-card__title-low">Website</div>
+                <h1 class="price-card__title">Webshop
+                    <div class="price-card__title-low">Website</div>
+                </h1>
+
                 <div class="price-card__price orange"><span>599€</span></div>
                 <div class="price-card__description">Your very own webshop made the world's most popular CMS system, Wordpress.</div>
                 <div class="price-card__options-list">
