--- a/price-page/index.html
+++ b/price-page/index.html
@@ -14,9 +14,14 @@
     <div class="page">
         <div class="price-cards">
             <div class="price-card">
-                <h1 class="price-card__title">Basic
-                    <div class="price-card__title-low">Website</div>
-                </h1>
+
+                <div class="container">
+                    <div class="price-card__title">Basic
+                        <div class="price-card__title-low">Website</div>
+                    </div>
+                </div>
+
+
 
                 <div class="price-card__price green"><span>99€</span></div>
                 <div class="price-card__description">Simple website made in the world's most popular CMS system, Wordpress.</div>
@@ -49,9 +54,11 @@
                 <button class="price-card__order-btn green">ORDER NOW</button>
             </div>
             <div class="price-card">
-                <h1 class="price-card__title">Business
-                    <div class="price-card__title-low">Website</div>
-                </h1>
+                <div class="container">
+                    <h1 class="price-card__title">Business
+                        <div class="price-card__title-low">Website</div>
+                    </h1>
+                </div>
 
                 <img class='popular__badge' src="./img/badge.png" alt="badge-popular">
                 <div class="price-card__price blue">
@@ -87,10 +94,11 @@
                 <button class="price-card__order-btn blue">ORDER NOW</button>
             </div>
             <div class="price-card">
-                <h1 class="price-card__title">Webshop
-                    <div class="price-card__title-low">Website</div>
-                </h1>
-
+                <div class="container">
+                    <h1 class="price-card__title">Webshop
+                        <div class="price-card__title-low">Website</div>
+                    </h1>
+                </div>
                 <div class="price-card__price orange"><span>599€</span></div>
                 <div class="price-card__description">Your very own webshop made the world's most popular CMS system, Wordpress.</div>
                 <div class="price-card__options-list">
