--- a/price-page/index.html
+++ b/price-page/index.html
@@ -63,7 +63,7 @@
                     </h1>
                 </div>
 
-                <img class='popular__badge' src="./img/badge.png" alt="badge-popular">
+                <div class='popular__badge'>POPULAR</div>
                 <div class="price-card__price blue">
                     <span>299€</span>
                 </div>
